# Bachelor-temp

./: .gitignore  CMakeLists.txt  LICENSE  build.ps1  compare_local_vs_oscar.ps1
backend/: CMakeLists.txt
backend/include/: graph.hpp  poi.hpp  router.hpp  server.hpp  spatial_index.hpp
backend/src/: analyze_pois.cpp  analyze_tags.cpp  bench_pois.cpp  graph.cpp  main.cpp  poi.cpp  router.cpp  server.cpp  spatial_index.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: benchmark.js  map.js  pois.js  routing.js  sequenced.js
scripts/: build.sh  install_dependencies.sh  install_dependencies_msys2.sh
